--- a/index.html
+++ b/index.html
@@ -2,9 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>IP-Calculator</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Explore IP addresses and subnets with our user-friendly IP calculator. Whether you're a networking professional, a system administrator, or simply curious, our tool offers detailed insights to empower your understanding of networking concepts. Enter an IP address and prefix length to unveil subnet details. Welcome to a seamless experience of IP address exploration and calculation!">
+    <meta name="keywords" content="IP calculator, subnet details, networking concepts, system administrator, network enthusiast, IP exploration, IP calculation">
+    <meta name="author" content="Your Name">
+    <meta name="robots" content="index, follow">
+    <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+    <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+    <meta name="bingbot" content="index, follow">
+    <meta name="rating" content="general">
+    <meta name="distribution" content="global">
+    <meta name="revisit-after" content="7 days">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+<!--    <link rel="canonical" href="https://www.yourwebsite.com">-->
+    <meta property="og:title" content="Your IP Calculator Website">
+    <meta property="og:description" content="Explore IP addresses and subnets with our user-friendly calculator.">
+    <meta property="og:image" content="https://www.yourwebsite.com/images/your-image.jpg">
+    <meta property="og:url" content="https://www.yourwebsite.com">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Your IP Calculator Website">
+    <meta name="twitter:description" content="Explore IP addresses and subnets with our user-friendly calculator.">
+    <meta name="twitter:image" content="https://www.yourwebsite.com/images/your-image.jpg">
+    <title>Your IP Calculator Website</title>
 </head>
 <body>
-    
+
 </body>
 </html>
