--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <meta name="twitter:title" content="Your IP Calculator Website">
     <meta name="twitter:description" content="Explore IP addresses and subnets with our user-friendly calculator.">
     <meta name="twitter:image" content="https://www.yourwebsite.com/images/your-image.jpg">
-    <title>Your IP Calculator Website</title>
+    <link rel="icon" type="image/x-icon" href="assets/image/logo.png">
+    <title>IP Calculator</title>
 </head>
 <body>
 
