--- a/index.html
+++ b/index.html
@@ -25,9 +25,39 @@
     <meta name="twitter:description" content="Explore IP addresses and subnets with our user-friendly calculator.">
     <meta name="twitter:image" content="https://www.yourwebsite.com/images/your-image.jpg">
     <link rel="icon" type="image/x-icon" href="assets/image/logo.png">
+    <link rel="stylesheet" href="assets/css/index.css">
     <title>IP Calculator</title>
+    <link rel="stylesheet" href="assets/css/bootstrap.css">
 </head>
 <body>
+    <header>
+        <div class="logo">
+            <img src="assets/image/logo.png" alt="logo">
+        </div>
+        <div class="title">
+            <h2>IP Calculator</h2>
+        </div>
+    </header>
+    <main>
+        <section>
+            <section></section>
+            <section></section>
+        </section>
+    </main>
+        <footer>
+            <div>
+                <small>
+                    <p>© 2024 IP Calculator. All rights reserved. @SavindaJ</p>
+                    <p>Designed by <a href="https://github.com/savindaJ" target="_blank">SavindaJ</a></p>
+                </small>
 
+                <div class="link">
+                    <a href="" target="_blank"><img src="assets/image/icons8-facebook-240.png" alt="facebook"></a>
+                    <a href="https://twitter.com/SavindaJ" target="_blank"><img src="assets/image/icons8-x-100.png" alt="twitter"></a>
+                    <a href="" target="_blank"><img src="assets/image/icons8-linkedin-480.png" alt="linkedin"></a>
+                </div>
+            </div>
+
+        </footer>
 </body>
 </html>
