--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Explore IP addresses and subnets with our user-friendly IP calculator. Whether you're a networking professional, a system administrator, or simply curious, our tool offers detailed insights to empower your understanding of networking concepts. Enter an IP address and prefix length to unveil subnet details. Welcome to a seamless experience of IP address exploration and calculation!">
-    <meta name="keywords" content="IP calculator, subnet details, networking concepts, system administrator, network enthusiast, IP exploration, IP calculation">
+    <meta name="description"
+          content="Explore IP addresses and subnets with our user-friendly IP calculator. Whether you're a networking professional, a system administrator, or simply curious, our tool offers detailed insights to empower your understanding of networking concepts. Enter an IP address and prefix length to unveil subnet details. Welcome to a seamless experience of IP address exploration and calculation!">
+    <meta name="keywords"
+          content="IP calculator, subnet details, networking concepts, system administrator, network enthusiast, IP exploration, IP calculation">
     <meta name="author" content="Your Name">
     <meta name="robots" content="index, follow">
     <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1">
@@ -14,7 +16,7 @@
     <meta name="distribution" content="global">
     <meta name="revisit-after" content="7 days">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<!--    <link rel="canonical" href="https://www.yourwebsite.com">-->
+    <!--    <link rel="canonical" href="https://www.yourwebsite.com">-->
     <meta property="og:title" content="Your IP Calculator Website">
     <meta property="og:description" content="Explore IP addresses and subnets with our user-friendly calculator.">
     <meta property="og:image" content="https://www.yourwebsite.com/images/your-image.jpg">
@@ -30,34 +32,208 @@
     <link rel="stylesheet" href="assets/css/bootstrap.css">
 </head>
 <body>
-    <header>
-        <div class="logo">
-            <img src="assets/image/logo.png" alt="logo">
-        </div>
-        <div class="title">
-            <h2>IP Calculator</h2>
-        </div>
-    </header>
-    <main>
+<header>
+    <div class="logo">
+        <img src="assets/image/logo.png" alt="logo">
+    </div>
+    <div class="title">
+        <h2>IP Calculator</h2>
+    </div>
+</header>
+<main>
+    <section>
         <section>
-            <section></section>
-            <section></section>
-        </section>
-    </main>
-        <footer>
-            <div>
-                <small>
-                    <p>© 2024 IP Calculator. All rights reserved. @SavindaJ</p>
-                    <p>Designed by <a href="https://github.com/savindaJ" target="_blank">SavindaJ</a></p>
-                </small>
+            <div class="input-group">
+                <span class="input-group-text">Ip Address :</span>
+                <input type="text" aria-label="First name" class="form-control me-5">
+                <h3 class="me-5 text-white">/</h3>
+                <span class="input-group-text">Prefix Bit :</span>
+                <input type="text" aria-label="Last name" class="form-control">
+            </div>
 
-                <div class="link">
-                    <a href="" target="_blank"><img src="assets/image/icons8-facebook-240.png" alt="facebook"></a>
-                    <a href="https://twitter.com/SavindaJ" target="_blank"><img src="assets/image/icons8-x-100.png" alt="twitter"></a>
-                    <a href="" target="_blank"><img src="assets/image/icons8-linkedin-480.png" alt="linkedin"></a>
+            <div class="ms-5">
+
+                <div class="d-flex mt-3">
+                    <h5 class="text-white me-5">Network Class :</h5>
+                    <h5 class="text-white">Result</h5>
+                </div>
+
+                <div class="d-flex mt-3">
+                    <h5 class="text-white me-5">Network Bits :</h5>
+                    <h5 class="text-white">Result</h5>
+                </div>
+
+                <div class="d-flex mt-3">
+                    <h5 class="text-white me-5">Subnet Bits :</h5>
+                    <h5 class="text-white">Result</h5>
+                </div>
+
+                <div class="d-flex mt-3">
+                    <h5 class="text-white me-5">Host Bits :</h5>
+                    <h5 class="text-white">Result</h5>
+                </div>
+
+                <div class="d-flex mt-3">
+                    <h5 class="text-white me-5">Possiible No of Subnet :</h5>
+                    <h5 class="text-white">Result</h5>
+                </div>
+
+                <div class="d-flex mt-3">
+                    <h5 class="text-white me-5">Broadcast IP of the Exiting subnet :</h5>
+                    <h5 class="text-white">Result</h5>
+                </div>
+
+                <div class="me-5">
+                    <button class="btn btn-primary mt-3 ms-5">Calculate</button>
+                    <button class="btn btn-primary mt-3 ms-2">Copy</button>
                 </div>
             </div>
 
-        </footer>
+        </section>
+        <section>
+            <div>
+                <div>
+                    <h1 class="text-center text-white">Unlock the Power of<br>
+                        IP Addresses!</h1>
+                </div>
+                <div class="mt-5">
+                    <h3 class="text-center text-danger me-5">Note !</h3>
+                    <p class="text-center text-white me-5">Explore IP addresses and subnets with our user-friendly IP
+                        calculator. Whether you're a networking professional, a system administrator, or simply curious,
+                        our tool offers detailed insights to empower your understanding of networking concepts. Enter an
+                        IP address and prefix length to unveil subnet details. Welcome to a seamless experience of IP
+                        address exploration and calculation!</p>
+                </div>
+            </div>
+        </section>
+    </section>
+    <section class="row d-flex h-50 overflow-auto col-lg-10 col-12 m-auto z-0">
+        <table class="table table-striped table-hover border" id="tbl-order-detail">
+            <thead class="table-bordered sticky-top overflow-auto table-info">
+            <tr>
+                <th scope="col">Order ID</th>
+                <th scope="col">Customer ID</th>
+                <th scope="col">Item ID</th>
+                <th scope="col">QTY</th>
+                <th scope="col">Date</th>
+            </tr>
+            </thead>
+            <tbody id="order-detail-body">
+            <tr>
+                <td>O001</td>
+                <td>C001</td>
+                <td>I001</td>
+                <td>4</td>
+                <td>2023/9/30</td>
+            </tr>
+            <tr>
+                <td>O001</td>
+                <td>C001</td>
+                <td>I001</td>
+                <td>4</td>
+                <td>2023/9/30</td>
+            </tr>
+            <tr>
+                <td>O001</td>
+                <td>C001</td>
+                <td>I001</td>
+                <td>4</td>
+                <td>2023/9/30</td>
+            </tr>
+            <tr>
+                <td>O001</td>
+                <td>C001</td>
+                <td>I001</td>
+                <td>4</td>
+                <td>2023/9/30</td>
+            </tr>
+            <tr>
+                <td>O001</td>
+                <td>C001</td>
+                <td>I001</td>
+                <td>4</td>
+                <td>2023/9/30</td>
+            </tr>
+            <tr>
+                <td>O001</td>
+                <td>C001</td>
+                <td>I001</td>
+                <td>4</td>
+                <td>2023/9/30</td>
+            </tr>
+            <tr>
+                <td>O001</td>
+                <td>C001</td>
+                <td>I001</td>
+                <td>4</td>
+                <td>2023/9/30</td>
+            </tr>
+
+            <tr>
+                <td>O001</td>
+                <td>C001</td>
+                <td>I001</td>
+                <td>4</td>
+                <td>2023/9/30</td>
+            </tr>
+
+            <tr>
+                <td>O001</td>
+                <td>C001</td>
+                <td>I001</td>
+                <td>4</td>
+                <td>2023/9/30</td>
+            </tr>
+
+            <tr>
+                <td>O001</td>
+                <td>C001</td>
+                <td>I001</td>
+                <td>4</td>
+                <td>2023/9/30</td>
+            </tr>
+            <tr>
+                <td>O001</td>
+                <td>C001</td>
+                <td>I001</td>
+                <td>4</td>
+                <td>2023/9/30</td>
+            </tr>
+
+            <tr>
+                <td>O001</td>
+                <td>C001</td>
+                <td>I001</td>
+                <td>4</td>
+                <td>2023/9/30</td>
+            </tr>
+            <tr>
+                <td>O001</td>
+                <td>C001</td>
+                <td>I001</td>
+                <td>4</td>
+                <td>2023/9/30</td>
+            </tr>
+
+            </tbody>
+        </table>
+    </section>
+</main>
+<footer>
+    <div>
+        <small>
+            <p class="p-2">Designed by <a href="https://github.com/savindaJ" target="_blank">SavindaJ</a></p>
+            <p class="m-auto mt">© 2024 IP Calculator. All rights reserved. @SavindaJ</p>
+        </small>
+
+        <div class="link">
+            <a href="" target="_blank"><img src="assets/image/icons8-facebook-240.png" alt="facebook"></a>
+            <a href="https://twitter.com/SavindaJ" target="_blank"><img src="assets/image/icons8-x-100.png"
+                                                                        alt="twitter"></a>
+            <a href="" target="_blank"><img src="assets/image/icons8-linkedin-480.png" alt="linkedin"></a>
+        </div>
+    </div>
+
+</footer>
 </body>
 </html>
