--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <main>
     <section>
         <section>
-            <div class="input-group">
+            <div class="input-group ms-3">
                 <span class="input-group-text">Ip Address :</span>
                 <input type="text" aria-label="First name" class="form-control me-5">
                 <h3 class="me-5 text-white">/</h3>
@@ -54,33 +54,33 @@
             <div class="ms-5">
 
                 <div class="d-flex mt-3">
-                    <h5 class="text-white me-5">Network Class :</h5>
-                    <h5 class="text-white">Result</h5>
+                    <h5 class="text-white me-3">@ Network Class :</h5>
+                    <h5 class="text-info">Result</h5>
                 </div>
 
                 <div class="d-flex mt-3">
-                    <h5 class="text-white me-5">Network Bits :</h5>
-                    <h5 class="text-white">Result</h5>
+                    <h5 class="text-white me-3">@ Network Bits :</h5>
+                    <h5 class="text-info">Result</h5>
                 </div>
 
                 <div class="d-flex mt-3">
-                    <h5 class="text-white me-5">Subnet Bits :</h5>
-                    <h5 class="text-white">Result</h5>
+                    <h5 class="text-white me-3">@ Subnet Bits :</h5>
+                    <h5 class="text-info">Result</h5>
                 </div>
 
                 <div class="d-flex mt-3">
-                    <h5 class="text-white me-5">Host Bits :</h5>
-                    <h5 class="text-white">Result</h5>
+                    <h5 class="text-white me-3">@ Host Bits :</h5>
+                    <h5 class="text-info">Result</h5>
                 </div>
 
                 <div class="d-flex mt-3">
-                    <h5 class="text-white me-5">Possiible No of Subnet :</h5>
-                    <h5 class="text-white">Result</h5>
+                    <h5 class="text-white me-3">@ Possiible No of Subnet :</h5>
+                    <h5 class="text-info">Result</h5>
                 </div>
 
                 <div class="d-flex mt-3">
-                    <h5 class="text-white me-5">Broadcast IP of the Exiting subnet :</h5>
-                    <h5 class="text-white">Result</h5>
+                    <h5 class="text-white me-3">@ Broadcast IP of the Exiting subnet :</h5>
+                    <h5 class="text-info">Result</h5>
                 </div>
 
                 <div class="me-5">
@@ -101,7 +101,7 @@
                     <p class="text-center text-white me-5">Explore IP addresses and subnets with our user-friendly IP
                         calculator. Whether you're a networking professional, a system administrator, or simply curious,
                         our tool offers detailed insights to empower your understanding of networking concepts. Enter an
-                        IP address and prefix length to unveil subnet details. Welcome to a seamless experience of IP
+                        IP address and prefix length to unveil subnet details.<span class="text-warning text-decoration-underline">(Only IP class A / B / C)</span> Welcome to a seamless experience of IP
                         address exploration and calculation!</p>
                 </div>
             </div>
@@ -111,109 +111,24 @@
         <table class="table table-striped table-hover border" id="tbl-order-detail">
             <thead class="table-bordered sticky-top overflow-auto table-info">
             <tr>
-                <th scope="col">Order ID</th>
-                <th scope="col">Customer ID</th>
-                <th scope="col">Item ID</th>
-                <th scope="col">QTY</th>
-                <th scope="col">Date</th>
+                <th scope="col">subnet</th>
+                <th scope="col">ID</th>
+                <th scope="col">Broadcast IP</th>
+                <th scope="col">Num Of Host</th>
+                <th scope="col">1 st Assignable IP</th>
+                <th scope="col">Last Assignable IP</th>
             </tr>
             </thead>
             <tbody id="order-detail-body">
             <tr>
-                <td>O001</td>
-                <td>C001</td>
-                <td>I001</td>
-                <td>4</td>
-                <td>2023/9/30</td>
-            </tr>
-            <tr>
-                <td>O001</td>
-                <td>C001</td>
-                <td>I001</td>
-                <td>4</td>
-                <td>2023/9/30</td>
-            </tr>
-            <tr>
-                <td>O001</td>
-                <td>C001</td>
-                <td>I001</td>
-                <td>4</td>
-                <td>2023/9/30</td>
-            </tr>
-            <tr>
-                <td>O001</td>
-                <td>C001</td>
-                <td>I001</td>
-                <td>4</td>
-                <td>2023/9/30</td>
-            </tr>
-            <tr>
-                <td>O001</td>
-                <td>C001</td>
-                <td>I001</td>
-                <td>4</td>
-                <td>2023/9/30</td>
-            </tr>
-            <tr>
-                <td>O001</td>
-                <td>C001</td>
-                <td>I001</td>
-                <td>4</td>
-                <td>2023/9/30</td>
-            </tr>
-            <tr>
-                <td>O001</td>
-                <td>C001</td>
-                <td>I001</td>
-                <td>4</td>
-                <td>2023/9/30</td>
+                <td>Sample</td>
+                <td>Sample</td>
+                <td>Sample</td>
+                <td>Sample</td>
+                <td>Sample</td>
+                <td>Sample</td>
             </tr>
 
-            <tr>
-                <td>O001</td>
-                <td>C001</td>
-                <td>I001</td>
-                <td>4</td>
-                <td>2023/9/30</td>
-            </tr>
-
-            <tr>
-                <td>O001</td>
-                <td>C001</td>
-                <td>I001</td>
-                <td>4</td>
-                <td>2023/9/30</td>
-            </tr>
-
-            <tr>
-                <td>O001</td>
-                <td>C001</td>
-                <td>I001</td>
-                <td>4</td>
-                <td>2023/9/30</td>
-            </tr>
-            <tr>
-                <td>O001</td>
-                <td>C001</td>
-                <td>I001</td>
-                <td>4</td>
-                <td>2023/9/30</td>
-            </tr>
-
-            <tr>
-                <td>O001</td>
-                <td>C001</td>
-                <td>I001</td>
-                <td>4</td>
-                <td>2023/9/30</td>
-            </tr>
-            <tr>
-                <td>O001</td>
-                <td>C001</td>
-                <td>I001</td>
-                <td>4</td>
-                <td>2023/9/30</td>
-            </tr>
 
             </tbody>
         </table>
@@ -228,8 +143,7 @@
 
         <div class="link">
             <a href="" target="_blank"><img src="assets/image/icons8-facebook-240.png" alt="facebook"></a>
-            <a href="https://twitter.com/SavindaJ" target="_blank"><img src="assets/image/icons8-x-100.png"
-                                                                        alt="twitter"></a>
+            <a href="https://twitter.com/SavindaJ" target="_blank"><img src="assets/image/icons8-x-100.png" alt="twitter"></a>
             <a href="" target="_blank"><img src="assets/image/icons8-linkedin-480.png" alt="linkedin"></a>
         </div>
     </div>
