--- a/index.html
+++ b/index.html
@@ -149,5 +149,7 @@
     </div>
 
 </footer>
+<script src="assets/js/jquery.js"></script>
+<script src="assets/js/index.js"></script>
 </body>
 </html>
