--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                 </div>
 
                 <div class="me-5">
-                    <button class="btn btn-primary mt-3 ms-5">Calculate</button>
-                    <button class="btn btn-primary mt-3 ms-2">Copy</button>
+                    <button id="btnProcess" class="btn btn-primary mt-3 ms-5">Process</button>
+                    <button class="btn btn-primary mt-3 ms-2" disabled>Copy</button>
                 </div>
             </div>
 
@@ -149,7 +149,7 @@
     </div>
 
 </footer>
-<script src="assets/js/jquery.js"></script>
+<script src="assets/js/jq.js"></script>
 <script src="assets/js/index.js"></script>
 </body>
 </html>
