--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 </div>
 
                 <div class="d-flex mt-3">
-                    <h5 class="text-white me-3">@ Broadcast IP of the Exiting subnet :</h5>
+                    <h5 class="text-white me-3">@ subnet mask :</h5>
                     <h5 class="text-info">Result</h5>
                 </div>
 
@@ -149,7 +149,7 @@
     </div>
 
 </footer>
-<script src="assets/js/jq.js"></script>
+<script src="assets/js/jquery.js"></script>
 <script src="assets/js/index.js"></script>
 </body>
 </html>
