--- a/index.html
+++ b/index.html
@@ -107,9 +107,18 @@
             </div>
         </section>
     </section>
-    <section class="row d-flex h-50 overflow-auto col-lg-10 col-12 m-auto z-0">
+    <section class="row h-50 overflow-auto col-lg-10 col-12 m-auto z-0">
         <table class="table table-striped table-hover border" id="tbl-order-detail">
+
             <thead class="table-bordered sticky-top overflow-auto table-info">
+            <tr class="text-center">
+                <td></td>
+                <th></th>
+                <th></th>
+                <th class="text-bg-secondary">Subnet Details</th>
+                <th></th>
+                <th></th>
+            </tr>
             <tr>
                 <th scope="col">subnet</th>
                 <th scope="col">ID</th>
